package eng.jAtcSim.newLib.area.approaches.stages;

public interface IApproachStage {

}
