package eng.jAtcSim.newLib.area.approaches.stages;

public interface ICheckStage extends IApproachStage {
//
//  @Override
//  public eResult initStage(IPilot4Behavior pilot) {
//    return eResult.ok;
//  }
//
//  @Override
//  public eResult flyStage(IPilot4Behavior pilot) {
//    eResult checkResult = check(pilot);
//    return checkResult;
//  }
//
//  protected abstract eResult check(IPilot4Behavior pilot);
//
//  @Override
//  public eResult disposeStage(IPilot4Behavior pilot) {
//    return eResult.ok;
//  }
//
//  @Override
//  public boolean isFinishedStage(IPilot4Behavior pilot) {
//    return true;
//  }
}
