package eng.jAtcSim.newLib.area.approaches.stages;

public class LandingStage implements IApproachStage {
  public LandingStage() {
  }
}
