package eng.jAtcSim.newLib.area.approaches.stages.checks;

import eng.jAtcSim.newLib.area.approaches.stages.ICheckStage;

public class CheckAirportVisibilityStage implements ICheckStage {
//  @Override
//  protected eResult check(IPilot5Behavior pilot) {
//    Weather w = Acc.weather();
//    if ((w.getCloudBaseInFt() + Acc.airport().getAltitude()) < pilot.getAltitude()) {
//      return eResult.runwayNotInSight;
//    }
//    double d = Coordinates.getDistanceInNM(pilot.getCoordinate(), pilot.getAssignedApproach().getParent().getCoordinate());
//    if (w.getVisibilityInMilesReal() < d) {
//      return eResult.runwayNotInSight;
//    }
//    return eResult.ok;
//  }
}
